# ecs-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  run_tests.py
docs/: index.md
ecs_mcp/: __init__.py  cli.py  client.py  server.py
tests/: test_cli.py  test_client.py
